--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "form-validation-practice",
   "version": "1.0.0",
   "description": "A practice project in form validation",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "presa-form-validation": "^1.0.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4"
   }
 }
